welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while (estFaceMur() == false))      {
	while (estSurBiscuit()==false && estFaceMur==false) {avance()}
if (estSurBiscuit()) {prendBiscuit();while (estSurBiscuit() == false ) { recule()}
avance(); poseBiscuit()
}}
while (!estFaceMur) {avance()}
droite()
avance()
gauche()
avance()
droite()
droite()
droite()